Use JOGL builds that do not include native libs
Both this commit and the previous one still need to be reflected
properly in the installer builds of McV.

[3042]