@@ -277,10 +277,10 @@
     <!-- The CLASSPATH specified within McV's manifest 
          Note: if you're going to modify this property, be sure to make similar
          modifications to the "mcv.libs" fileset. -->
-<!--    <property name="jar.base.classpath" value="jansi-${jansi.version}.jar ${userguide.jarname} ncIdv-${ncidv.version}.jar external-trimmed-${idv.version}.jar jogamp-all-${jogamp.version}.jar sysout-over-slf4j-${sysout.version}.jar miglayout-core-${miglayout.version}.jar miglayout-swing-${miglayout.version}.jar eventbus-${eventbus.version}.jar logback-core-${logback.version}.jar logback-classic-${logback.version}.jar log4j-over-slf4j-${slf4j.version}.jar slf4j-api-${slf4j.version}.jar ${local-idv.jarname} commons-math3-${commons-math.version}.jar rsyntaxtextarea-${rsyntaxtextarea.version}.jar jul-to-slf4j-${slf4j.version}.jar local-visad-${idv.version}.jar visad-${visad.version}.jar idv-${idv.version}.jar ${userguide.jarname} JSatTrak-${jsattrack.version}.jar swingx-common-${swingx.version}.jar j3dcore-${java3d.version}.jar j3dutils-${java3d.version}.jar vecmath-${java3d.version}.jar jython-standalone-${jython.version}.jar juniversalchardet-${juniversalchardet.version}.jar commons-httpclient-${commons-httpclient.version}.jar jcodec-javase-${jcodec.version}.jar jcodec-${jcodec.version}.jar flatlaf-${flatlaf.version}-no-natives.jar flatlaf-extras-${flatlaf.version}.jar flatlaf-intellij-themes-${flatlaf.version}.jar flatlaf-swingx-${flatlaf.version}.jar batik-all-${batik.version}.jar batik-anim-${batik.version}.jar batik-awt-util-${batik.version}.jar batik-bridge-${batik.version}.jar batik-codec-${batik.version}.jar batik-constants-${batik.version}.jar batik-css-${batik.version}.jar batik-dom-${batik.version}.jar batik-ext-${batik.version}.jar batik-extension-${batik.version}.jar batik-gui-util-${batik.version}.jar batik-gvt-${batik.version}.jar batik-i18n-${batik.version}.jar batik-parser-${batik.version}.jar batik-script-${batik.version}.jar batik-shared-resources-${batik.version}.jar batik-svg-dom-${batik.version}.jar batik-svgbrowser-${batik.version}.jar batik-svggen-${batik.version}.jar batik-svgrasterizer-${batik.version}.jar batik-swing-${batik.version}.jar batik-test-${batik.version}.jar batik-test-old-${batik.version}.jar batik-test-svg-${batik.version}.jar batik-test-swing-${batik.version}.jar batik-transcoder-${batik.version}.jar batik-util-${batik.version}-tests.jar batik-util-${batik.version}.jar batik-xml-${batik.version}.jar external-trimmed-5.7.jar fop-transcoder-allinone-${fop-xmlgraphics.version}.jar rhino-1.7.14.jar serializer-2.7.3.jar xml-apis-1.4.01.jar xml-apis-ext-1.3.04.jar xmlgraphics-commons-${fop-xmlgraphics.version}.jar commons-collections4-${commons-collections.version}.jar hydra-resources-${hydra.version}.jar" />-->
-    <property name="jar.base.classpath" value="${userguide.jarname} ncIdv-${ncidv.version}.jar external-trimmed-${idv.version}.jar jogamp-all-${jogamp.version}.jar sysout-over-slf4j-${sysout.version}.jar miglayout-core-${miglayout.version}.jar miglayout-swing-${miglayout.version}.jar eventbus-${eventbus.version}.jar logback-core-${logback.version}.jar logback-classic-${logback.version}.jar log4j-over-slf4j-${slf4j.version}.jar slf4j-api-${slf4j.version}.jar ${local-idv.jarname} commons-math3-${commons-math.version}.jar rsyntaxtextarea-${rsyntaxtextarea.version}.jar jul-to-slf4j-${slf4j.version}.jar local-visad-${idv.version}.jar visad-${visad.version}.jar idv-${idv.version}.jar ${userguide.jarname} JSatTrak-${jsattrack.version}.jar swingx-common-${swingx.version}.jar j3dcore-${java3d.version}.jar j3dutils-${java3d.version}.jar vecmath-${java3d.version}.jar jython-standalone-${jython.version}.jar juniversalchardet-${juniversalchardet.version}.jar commons-httpclient-${commons-httpclient.version}.jar jcodec-javase-${jcodec.version}.jar jcodec-${jcodec.version}.jar flatlaf-${flatlaf.version}-no-natives.jar flatlaf-extras-${flatlaf.version}.jar flatlaf-intellij-themes-${flatlaf.version}.jar flatlaf-swingx-${flatlaf.version}.jar batik-all-${batik.version}.jar batik-anim-${batik.version}.jar batik-awt-util-${batik.version}.jar batik-bridge-${batik.version}.jar batik-codec-${batik.version}.jar batik-constants-${batik.version}.jar batik-css-${batik.version}.jar batik-dom-${batik.version}.jar batik-ext-${batik.version}.jar batik-extension-${batik.version}.jar batik-gui-util-${batik.version}.jar batik-gvt-${batik.version}.jar batik-i18n-${batik.version}.jar batik-parser-${batik.version}.jar batik-script-${batik.version}.jar batik-shared-resources-${batik.version}.jar batik-svg-dom-${batik.version}.jar batik-svgbrowser-${batik.version}.jar batik-svggen-${batik.version}.jar batik-svgrasterizer-${batik.version}.jar batik-swing-${batik.version}.jar batik-test-${batik.version}.jar batik-test-old-${batik.version}.jar batik-test-svg-${batik.version}.jar batik-test-swing-${batik.version}.jar batik-transcoder-${batik.version}.jar batik-util-${batik.version}-tests.jar batik-util-${batik.version}.jar batik-xml-${batik.version}.jar external-trimmed-5.7.jar fop-transcoder-allinone-${fop-xmlgraphics.version}.jar rhino-1.7.14.jar serializer-2.7.3.jar xml-apis-1.4.01.jar xml-apis-ext-1.3.04.jar xmlgraphics-commons-${fop-xmlgraphics.version}.jar commons-collections4-${commons-collections.version}.jar hydra-resources-${hydra.version}.jar" />
+<!--    <property name="jar.base.classpath" value="jansi-${jansi.version}.jar ${userguide.jarname} ncIdv-${ncidv.version}.jar external-trimmed-${idv.version}.jar gluegen-rt-${jogamp.version}.jar jogamp-no-natives-${jogamp.version}.jar sysout-over-slf4j-${sysout.version}.jar miglayout-core-${miglayout.version}.jar miglayout-swing-${miglayout.version}.jar eventbus-${eventbus.version}.jar logback-core-${logback.version}.jar logback-classic-${logback.version}.jar log4j-over-slf4j-${slf4j.version}.jar slf4j-api-${slf4j.version}.jar ${local-idv.jarname} commons-math3-${commons-math.version}.jar rsyntaxtextarea-${rsyntaxtextarea.version}.jar jul-to-slf4j-${slf4j.version}.jar local-visad-${idv.version}.jar visad-${visad.version}.jar idv-${idv.version}.jar ${userguide.jarname} JSatTrak-${jsattrack.version}.jar swingx-common-${swingx.version}.jar j3dcore-${java3d.version}.jar j3dutils-${java3d.version}.jar vecmath-${java3d.version}.jar jython-standalone-${jython.version}.jar juniversalchardet-${juniversalchardet.version}.jar commons-httpclient-${commons-httpclient.version}.jar jcodec-javase-${jcodec.version}.jar jcodec-${jcodec.version}.jar flatlaf-${flatlaf.version}-no-natives.jar flatlaf-extras-${flatlaf.version}.jar flatlaf-intellij-themes-${flatlaf.version}.jar flatlaf-swingx-${flatlaf.version}.jar batik-all-${batik.version}.jar batik-anim-${batik.version}.jar batik-awt-util-${batik.version}.jar batik-bridge-${batik.version}.jar batik-codec-${batik.version}.jar batik-constants-${batik.version}.jar batik-css-${batik.version}.jar batik-dom-${batik.version}.jar batik-ext-${batik.version}.jar batik-extension-${batik.version}.jar batik-gui-util-${batik.version}.jar batik-gvt-${batik.version}.jar batik-i18n-${batik.version}.jar batik-parser-${batik.version}.jar batik-script-${batik.version}.jar batik-shared-resources-${batik.version}.jar batik-svg-dom-${batik.version}.jar batik-svgbrowser-${batik.version}.jar batik-svggen-${batik.version}.jar batik-svgrasterizer-${batik.version}.jar batik-swing-${batik.version}.jar batik-test-${batik.version}.jar batik-test-old-${batik.version}.jar batik-test-svg-${batik.version}.jar batik-test-swing-${batik.version}.jar batik-transcoder-${batik.version}.jar batik-util-${batik.version}-tests.jar batik-util-${batik.version}.jar batik-xml-${batik.version}.jar external-trimmed-5.7.jar fop-transcoder-allinone-${fop-xmlgraphics.version}.jar rhino-1.7.14.jar serializer-2.7.3.jar xml-apis-1.4.01.jar xml-apis-ext-1.3.04.jar xmlgraphics-commons-${fop-xmlgraphics.version}.jar commons-collections4-${commons-collections.version}.jar hydra-resources-${hydra.version}.jar" />-->
+    <property name="jar.base.classpath" value="${userguide.jarname} ncIdv-${ncidv.version}.jar external-trimmed-${idv.version}.jar gluegen-rt-${jogamp.version}.jar jogamp-no-natives-${jogamp.version}.jar sysout-over-slf4j-${sysout.version}.jar miglayout-core-${miglayout.version}.jar miglayout-swing-${miglayout.version}.jar eventbus-${eventbus.version}.jar logback-core-${logback.version}.jar logback-classic-${logback.version}.jar log4j-over-slf4j-${slf4j.version}.jar slf4j-api-${slf4j.version}.jar ${local-idv.jarname} commons-math3-${commons-math.version}.jar rsyntaxtextarea-${rsyntaxtextarea.version}.jar jul-to-slf4j-${slf4j.version}.jar local-visad-${idv.version}.jar visad-${visad.version}.jar idv-${idv.version}.jar ${userguide.jarname} JSatTrak-${jsattrack.version}.jar swingx-common-${swingx.version}.jar j3dcore-${java3d.version}.jar j3dutils-${java3d.version}.jar vecmath-${java3d.version}.jar jython-standalone-${jython.version}.jar juniversalchardet-${juniversalchardet.version}.jar commons-httpclient-${commons-httpclient.version}.jar jcodec-javase-${jcodec.version}.jar jcodec-${jcodec.version}.jar flatlaf-${flatlaf.version}-no-natives.jar flatlaf-extras-${flatlaf.version}.jar flatlaf-intellij-themes-${flatlaf.version}.jar flatlaf-swingx-${flatlaf.version}.jar batik-all-${batik.version}.jar batik-anim-${batik.version}.jar batik-awt-util-${batik.version}.jar batik-bridge-${batik.version}.jar batik-codec-${batik.version}.jar batik-constants-${batik.version}.jar batik-css-${batik.version}.jar batik-dom-${batik.version}.jar batik-ext-${batik.version}.jar batik-extension-${batik.version}.jar batik-gui-util-${batik.version}.jar batik-gvt-${batik.version}.jar batik-i18n-${batik.version}.jar batik-parser-${batik.version}.jar batik-script-${batik.version}.jar batik-shared-resources-${batik.version}.jar batik-svg-dom-${batik.version}.jar batik-svgbrowser-${batik.version}.jar batik-svggen-${batik.version}.jar batik-svgrasterizer-${batik.version}.jar batik-swing-${batik.version}.jar batik-test-${batik.version}.jar batik-test-old-${batik.version}.jar batik-test-svg-${batik.version}.jar batik-test-swing-${batik.version}.jar batik-transcoder-${batik.version}.jar batik-util-${batik.version}-tests.jar batik-util-${batik.version}.jar batik-xml-${batik.version}.jar external-trimmed-5.7.jar fop-transcoder-allinone-${fop-xmlgraphics.version}.jar rhino-1.7.14.jar serializer-2.7.3.jar xml-apis-1.4.01.jar xml-apis-ext-1.3.04.jar xmlgraphics-commons-${fop-xmlgraphics.version}.jar commons-collections4-${commons-collections.version}.jar hydra-resources-${hydra.version}.jar" />
 
-    <!-- List of McIDAS-V JAR files. 
+    <!-- List of McIDAS-V JAR files.
          Note: if you're going to modify this fileset, be sure to make similar
          modifications to the "jar.base.classpath" property. -->
     <fileset id="mcv.libs" dir="${dist.dir}">
@@ -374,7 +374,8 @@
         <pathelement location="${dist.dir}/${app.jarname}" />
         <pathelement location="${dist.dir}/${local-idv.jarname}" />
         <pathelement location="${dist.dir}/${userguide.jarname}" />
-        <pathelement location="${dist.dir}/jogamp-all-${jogamp.version}.jar" />
+        <pathelement location="${dist.dir}/gluegen-rt-${jogamp.version}.jar" />
+        <pathelement location="${dist.dir}/jogamp-no-natives-${jogamp.version}.jar" />
         <fileset refid="mcv.libs" />
         <fileset refid="netcdf.libs" />
         <fileset refid="idv.libs" />
@@ -1048,6 +1049,10 @@
             <jvmarg value="--add-opens" />
             <jvmarg value="java.base/javax.security.cert=ALL-UNNAMED" />
             <jvmarg value="--add-opens" />
+            <jvmarg value="java.base/jdk.internal.module=ALL-UNNAMED" />
+            <jvmarg value="--add-opens" />
+            <jvmarg value="java.base/jdk.internal.loader=ALL-UNNAMED" />
+            <jvmarg value="--add-opens" />
             <jvmarg value="java.base/sun.util.calendar=ALL-UNNAMED" />
             <jvmarg value="--add-opens" />
             <jvmarg value="java.security.jgss/org.ietf.jgss=ALL-UNNAMED" />
@@ -1163,6 +1168,10 @@
             <jvmarg value="-XX:+HeapDumpOnOutOfMemoryError" />
             <jvmarg value="-XX:HeapDumpPath=${heap.dir}" />
             <jvmarg value="-Xdock:icon=../release/icons/mcidasv.icns" if:set="build.macos" />
+<!--            <sysproperty key="jogamp.verbose" value="true" />-->
+<!--            <sysproperty key="jogamp.debug" value="true" />-->
+            <sysproperty key="jogamp.gluegen.UseTempJarCache" value="false" />
+            <sysproperty key="java.library.path" value="${dist.dir}" />
             <sysproperty key="sun.java2d.uiScale" value="${uiscale}" if:set="uiscale"/>
             <sysproperty key="loglevel" value="${run.log.level}" />
             <sysproperty key="mcv.userpath" value="${userpath.dir}" />
